--- a/区块链技术指南.md
+++ b/区块链技术指南.md
@@ -16,10 +16,9 @@
 
 ## 共识机制 PoW  Proof of Work
 
-nonce
+nonce 随机数 ，生成hash值前面0的个数表示难度
 
 ---
-
 
 - 公链
 任何人都可以参加，信息完全公开，比如比特币
@@ -29,3 +28,139 @@ nonce
 
 - 私链
 集中管理着进行限制，只能得到内部少数人可以使用，信息不公开
+
+
+# 价值
+- 分布式容错性
+- 不可篡改性
+- 隐私保护性
+
+
+
+## 分布式共识
+
+### 拜占庭
+
+
+交易本质上交换的是价值的所属权，但是往往撞见存在着不充分信任的情况
+
+
+###  顺序一致性 
+保证所有进程看到的全局执行顺序一致，并且每个进程自身的执行跟实际发生顺序一致。
+
+
+## 共识算法
+
+共识算法解决的是对某个提案Proposal 大家达成一致性意见的过程。
+
+非拜占庭错误：故障不响应的情况
+
+拜占庭错误：恶意响应的情况
+
+---
+
+
+非拜占庭错误应对：Paxos、Raft变种
+
+容忍拜占庭错误的情况：PBFT、Pow系列算法
+
+PBFT系列算法：PBFT系列算法是确定的，一旦达成共识就不可逆转。
+
+POW系列算法：PoW算法是不确定的，随着时间推移，被推翻的概率越来越小。
+
+
+即便在网络通信可靠情况下，一个可扩展的分布式系统的共识问题的下限是无解。被称为FLP不可能性原理，可以看做分布式领域的 **测不准原理**
+
+
+## FLP 不可能性原理
+
+在网络可靠，存在节点失效（即便只有一个）的最小化异步模型系统中，不存在一个可以解决一致性问题的确定性算法。
+
+该原理告诉人们，不要浪费时间去为异步分布式系统设计在任意场景下都能实现共识的算法
+
+科学告诉你什么是不可能的，工程则告诉你，付出一些代价，我可以把它变成可能的
+
+
+## CAP 原理 
+
+- 一致性 Consistency
+任何操作应该都是原子的
+
+- 可用性 Availablity
+在有限时间内，任何非失败节点都能应答请求
+
+- 分区容忍性 Partition
+网络可能发生分区，即节点之间的通信不可保障
+
+
+弱化可用性：Paxos、Raft等算法
+
+弱化分区容忍性：zookeeper
+
+
+## ACID 原理
+
+- Atomicity 原子性  
+每次操作是原子性，要么成功，要么不执行
+
+- Consistency  一致性
+数据库的状态是一致性的，无中间状态
+
+- Isolation 隔离性
+各种操作彼此相互不影响
+
+- Durability 持久性
+状态的改变是持久的，不会失效
+
+相对的原则是BASE ，Basic Availiability 
+
+
+## Paxos 与 Raft
+
+paxos问题是指分布式的系统中存在故障，但不存在恶意节点场景（消息丢失或重复）下的共识达成问题
+
+算法中将节点分为三种类型：
+
+proposer：提出一个提案，等待大家批准为结案。往往是客户端担任该角色
+
+acceptor：负责对提案进行投票。往往是服务端担任该角色
+
+learner：被告知结案结果，并与之统一，不参与投票过程。可能为客户端或服务端。
+
+safety：保证决议结果是对的，无歧义的，不会出现错误情况。
+
+决议只有在被proposers提出的proposal才能被最终批准
+
+在一次执行实例中，只批准一个最终决议，意味着多数接受accept的结果能成为决议
+
+liveness：保证决议过程能在有限时间内完成
+
+决议总会产生，并且learners能获得被批准的决议。
+
+
+基本过程：
+
+1、proposer提出提案
+
+2、争取大多数acceptor的支持
+
+3、超过一半支持时，则发生结案结果给所有人进行确认。
+
+paxos能保证在超过一半的正常节点存在时，系统能达成共识
+
+
+paxos里面对这两阶段分别是准备prepare和提交
+
+- 准备阶段
+
+提案这发送自己计划提交的提案的编号到多个接受者，试探是否可以锁定多数接受这额支持
+
+接受者时刻保留收到过提案的最大编号和接受的最大提案。
+
+- 提交阶段
+
+提案者如果收到大多数的回复，则可准备发送刚才提案号的接受消息。
+
+接受者收到接受消息后，如果发现提案号不小于接受的最大提案号，则接受该提案，并更新接受的最大提案。
+
+
