--- a/区块链技术指南.md
+++ b/区块链技术指南.md
@@ -164,3 +164,19 @@ paxos里面对这两阶段分别是准备prepare和提交
 接受者收到接受消息后，如果发现提案号不小于接受的最大提案号，则接受该提案，并更新接受的最大提案。
 
 
+
+## Raft 
+
+Raft算法是Paxos算法的一种简化实现
+三种角色：leader、candidate、follower
+
+- leader选举
+每个candidate随机经过一定时间都会提出选举方案，最近阶段中得票最多者被选为leader
+
+- 同步log
+leader会找到系统中log最新的记录，并强制所有的follower来舒心到这个记录
+
+## 拜占庭问题
+
+拜占庭算法讨论的是最坏情况下的保障
+
