--- a/区块链技术指南.md
+++ b/区块链技术指南.md
@@ -177,6 +177,151 @@ Raft算法是Paxos算法的一种简化实现
 leader会找到系统中log最新的记录，并强制所有的follower来舒心到这个记录
 
 ## 拜占庭问题
+讨论的是允许在少数节点作恶场景下的一致性达成问题
 
 拜占庭算法讨论的是最坏情况下的保障
 
+面向拜占庭问题的容错算法，解决的是网络通信可靠，但节点可能故障情况下的一致性达成
+
+pow Proof of work ：一个是限制一段时间内整个网络中出现提案的个数，另一个是放宽对最终一致性趣儿的需求，
+
+
+提高可靠性：
+- 让系统中的单点变得更可靠
+- 消灭单点
+
+
+# 密码学与安全技术
+
+hash算法一般都是算力敏感性，
+
+数字摘要：解决确保内容没被篡改过的问题
+
+对称加密：DES、3DES、AES
+
+非对称加密：RSA、EIGamal、椭圆曲线算法ECC
+
+
+混合加密机制：先用就算复杂度高的非对称加密协商一个临时的对称加密密钥，然后双方再通过对称加密对传递的大量数据进行加解密处理。典型的就是https
+
+
+
+## 数字签名
+
+数字签名：用于证实某数字内容的完整性和来源不可抵赖性
+
+### HMAC 
+Hash-based Message Authentication Code ：基于Hash的消息认证码
+
+基本过程为对某个消息，利用提前共享的对称密钥和Hash算法进行加密处理，得到HMAC值。
+
+### 盲签名
+签名者在无法看到原始内容的前提下对信息进行签名
+
+主要是为了实现防止追踪，签名者无法将签名内容和结果进行对应
+
+### 多重签名
+
+### 环签名
+环签名是一种简化的群签名
+
+签名者首先选定一个临时的签名者集合，集合包括 签名者自身。
+
+## 数字证书
+
+数字证书用来证明某个公钥是谁的，并且内容是正确的
+
+对非对称加密算法和数字签名来说，很重要的一点就是公钥的分发。
+
+一旦公钥被人替换（典型的如中间人攻击），则整个安全体系都将被破坏掉
+
+怎样确保一个公钥确实是某个人的原始公钥？这就需要数字证书机制
+
+证书 证明信息合法性。由证书认证机构ca来签发
+
+
+## PKI 体系
+
+非对称加密中，公钥则可以通过证书机制来进行保护，如何管理和分发证书则可以通过PKI来保障
+
+PKI不代表某个特定的密码技术和流程，
+
+PKI是建立在公私钥基础上实现安全可靠传递消息和身份确认的一个通用框架
+
+
+- CA Certification Authority :负责证书的颁发和作废，接受来自RA的请求，是最核心的部分
+- RA Registration Authority ：对用户身份进行验证，校验数据合法性，负责登记，审核过了就发给CA
+- 证书数据库：存放证书，一半采用LDAP目录服务，标准格式采用X.500系列
+
+常见流程：用户通过RA登记申请证书，CA完成证书的制造，颁发给用户
+
+
+
+## Merkle 树 
+
+默克尔树是又叫哈希树，是一种二叉树，由一个跟节点，一组中间节点和一组叶节点组成。
+
+最下面的叶节点包含存储数据或其哈希值，每个中间节点是它的两个孩子节点内容的哈希值
+
+底层数据的任何变动，都会传递到其父亲节点，一直到树根。
+
+快速比较大量数据：当两个默克尔树根相同时，则以为着所有的数据必然相同
+
+## 同态加密
+
+是一种特殊的加密方法，允许对密文进行处理得到仍然是加密结果，即对密文直接进行处理，跟对明文进行处理再加密，得到的结果相同。从代数的酵素讲，即同态性。
+
+
+---  
+
+# 比特币概念
+
+ 比特币网络是一个分布式的点对点网络，网络中的矿工通过挖矿来完成对交易记录的记账过程，维护网络的正常运行。
+ 
+ 
+##  账户/地址
+比特币账户采用了非对称的加密算法，用户自己保留私钥，对他发出的交易进行签名确认，并公开公钥。
+
+## 区块
+
+一个区块主要包括如下内容：
+- 4字节的区块大小信息
+- 80字节的区块头信息
+- 版本号4 字节
+- 上一个区块头的SHA256hash值；连接到一个合法的块上，32字节；
+- 包含的所有验证过的交易Merkle树根的哈希值，32字节
+- 时间戳 4 字节
+- 难度指标 4 字节
+- Nonce 4 字节，pow问题的答案；
+- 交易个数计数器1-9字节；
+
+所有交易的具体内容，可变长
+
+
+
+经济博弈原理
+
+三个人分蛋糕，分的人最后一个选
+
+越想拿到新区块的决定权，意味着抵押的算力越多，一旦失败，这些算力都会成为沉没成本
+
+
+## 负反馈调节
+
+
+矿工越多，系统就越稳定
+
+## 共识机制
+
+传统的共识问题是考虑在一个相对封闭的体系中
+
+
+## 闪电网络
+
+将大量交易放到比特币区块链之外进行。
+
+
+## HTLC
+
+hashed timelock contract 哈希的带时钟的合约，就是限时转账
+ 
